--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "main-1epoch",
+            "type": "python",
+            "request": "launch",
+            "program": "${cwd}/main.py",
+            "console": "integratedTerminal",
+            "args": ["--epochs", "1"]
+        },
+        {
             "name": "main",
             "type": "python",
             "request": "launch",
             "program": "${cwd}/main.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
         },
         {
             "name": "Python: Current File (Integrated Terminal)",
